@@ -1,0 +1,6 @@
+$NetBSD: distinfo,v 1.1 2019/08/09 15:20:31 brook Exp $
+
+SHA1 (R/latex2exp_0.4.0.tar.gz) = 8959f81be140278ff038525369e8f4ab9271898c
+RMD160 (R/latex2exp_0.4.0.tar.gz) = 42d5d3b64802c0a830880d2706808aa04b978bb4
+SHA512 (R/latex2exp_0.4.0.tar.gz) = 00bcdfcf807e183e011138200399152bae0ba64916dc4d96694e43b2e84f48db25d1697946319caa1312e107e326dbdf977dfa7759247e11a8b7aab2ce7a19b7
+Size (R/latex2exp_0.4.0.tar.gz) = 288749 bytes
